Fix placeholder text on safari

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,6 @@ html, body, ul, div, img, h1, a, li {
 	text-rendering: optimizeLegibility;
 	margin: 0;
 	padding: 0;
-	line-height: 0;
 	font-size: 0;
 	font-family: 'serif';
 }
@@ -66,17 +65,17 @@ h1 {
 	background-color: rgba(0,0,0,0.09);
 }
 #one:hover,#two:hover,#three:hover,#four:hover {
-	background-color: rgba(129, 210, 208, 1);
+	background-color: rgba(129, 210, 208, 0.9);
 }
 #one:hover h1, #two:hover h1, #three:hover h1, #four:hover h1 {
 	color: white;
 }
 .top {
-	top: calc(50% - 170px);
+	top: calc(25% + 20px);
 	right: 70px;
 }
 .bottom {
-	bottom: calc(50% - 170px);
+	bottom: calc(25% + 20px);
 	left: 70px;
 }
 .search {
